--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div>
                     <img src="/images/logo.svg" alt="" class="w-24">
                     <div class="flex gap-4 py-4">
-                        <img src="/images/icon-phone.svg" alt="" width="%">
+                        <img src="/images/icon-phone.svg" alt="">
                         <p>Phone: +1-543-123-4567</p>
                     </div>
                     <div class="flex gap-4">
@@ -96,9 +96,9 @@
                     <p>Privacy</p>
                 </div>
                 <div class="flex self-baseline gap-x-2 pr-20">
-                    <img src="/images/bxl-facebook.svg" alt="">
-                    <img src="/images/bxl-twitter.svg" alt="">
-                    <img src="/images/bxl-instagram.svg" alt="">
+                    <img src="/images/bxl-facebook.svg" alt="" class="w-6 h-6 invert">
+                    <img src="/images/bxl-twitter.svg" alt="" class="w-6 h-6 invert">
+                    <img src="/images/bxl-instagram.svg" alt="" class="w-6 h-6 invert">
                 </div>
             </footer>
         </div>
